# my_dealii

./: .bashrc  .gitignore  .vimrc  Dockerfile  README.md
BimetallicStrip/: .gitignore  BimetallicStrip.cc  CMakeLists.txt  Parameters.cc  Parameters.h  parameters.prm
FractureHealing/: .gitignore  CMakeLists.txt  FractureHealing.cc  Parameters.cc  Parameters.h  Time.cc  Time.h  fields.plt  fracture.geo  parameters.prm  plot_deltaT.sh
ThermalDebinding/: .gitignore  CMakeLists.txt  Material.cc  Material.h  Parameters.cc  Parameters.h  Polymer.h  PostProcess.h  ThermalDebinding.cc  Time.cc  Time.h  data.plt  fields.plt  parameters.prm
